Add: Html macro-structure & css reset rules

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <title>Spotify</title>
 </head>
 <body>
-    
+    <div class="app">
+        <main class="app__content">
+
+        </main>
+        <footer class="app__toolbar">
+
+        </footer>
+    </div>
 </body>
 </html>
