Add: toolbar structure &  bg color

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     <main class="app__content">
       <!-- side bar + app content -->
     </main>
-    <footer class="app__toolbar"></footer>
+
+	<!-- Toolbar with media player -->
+
+    <footer class="app__toolbar">
+			<div class="row toolbar">
+				<div class="toolbar__current">
+
+				</div>
+				<div class="toolbar__player">
+
+				</div>
+				<div class="toolbar__utility">
+
+				</div>
+			</div>
+		</footer>
   </body>
 </html>
