Add: Toolbar structure, left content + css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     ></script>
     <title>Spotify</title>
   </head>
-  <body class="debug app">
+  <body class="debu app">
     <main class="app__content">
       <!-- side bar + app content -->
     </main>
@@ -24,17 +24,31 @@
 	<!-- Toolbar with media player -->
 
     <footer class="app__toolbar">
-			<div class="row toolbar">
 				<div class="toolbar__current">
-
+					<figure class="toolbar__current-img">
+						<img src="./img/sinister.jpeg" alt="">
+					</figure>
+					<div>
+						<h4 class="text-white medium-text">Sinister</h4>
+						<p class="small-text text-grey">Brano Nome</p>
+					</div>
+						<span>
+							<a href="#"><i class="toolbar__current-icon text-grey fa-regular fa-heart"></i></a>
+						</span>
+						<span>
+							<a href="#"><i class="text-grey fa-regular fa-folder"></i></a>
+						</span>																				
 				</div>
+
+
 				<div class="toolbar__player">
 
 				</div>
+
+
 				<div class="toolbar__utility">
 
-				</div>
-			</div>
+			  </div>
 		</footer>
   </body>
 </html>
