Add: Toolbar media player icons

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
       <!-- side bar + app content -->
     </main>
 
-	<!-- Toolbar with media player -->
+	<!-- Toolbar -->
 
     <footer class="app__toolbar">
+			<!-- Toolbar Current Song with like button -->
 				<div class="toolbar__current">
 					<figure class="toolbar__current-img">
 						<img src="./img/sinister.jpeg" alt="">
@@ -40,9 +41,18 @@
 						</span>																				
 				</div>
 
-
+			<!-- Toolbar Media player -->
 				<div class="toolbar__player">
+					<ul class="toolbar__player-icons">
+						<li><a href="#"><i class="fa-solid fa-shuffle"></i></a></li>
+						<li><a href="#"><i class=" fa-solid fa-backward-step"></i></a></li>
+						<li class="player-icons__play"><a href="#"><i class="large-text fa-regular fa-circle-play"></i></a></li>
+						<li><a href="#"><i class=" fa-solid fa-forward-step"></i></a></li>
+						<li><a href="#"><i class="fa-solid fa-rotate-right"></i></a></li>
+					</ul>
+					<div class="toolbar__player-slider">
 
+					</div>
 				</div>
 
 
