Add: Toolbar media player

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- Toolbar -->
 
     <footer class="app__toolbar">
-			<!-- Toolbar Current Song with like button -->
+				<!-- Toolbar Current Song with like button -->
 				<div class="toolbar__current">
 					<figure class="toolbar__current-img">
 						<img src="./img/sinister.jpeg" alt="">
@@ -41,23 +41,44 @@
 						</span>																				
 				</div>
 
-			<!-- Toolbar Media player -->
+				<!-- Toolbar Media player -->
 				<div class="toolbar__player">
 					<ul class="toolbar__player-icons">
 						<li><a href="#"><i class="fa-solid fa-shuffle"></i></a></li>
 						<li><a href="#"><i class=" fa-solid fa-backward-step"></i></a></li>
-						<li class="player-icons__play"><a href="#"><i class="large-text fa-regular fa-circle-play"></i></a></li>
+						<li class="player-icons__play"><a href="#"><i class="fa-regular fa-circle-play"></i></a></li>
 						<li><a href="#"><i class=" fa-solid fa-forward-step"></i></a></li>
 						<li><a href="#"><i class="fa-solid fa-rotate-right"></i></a></li>
 					</ul>
 					<div class="toolbar__player-slider">
-
+						<div>
+							<p class="small-text text-white">0:25</p>
+						</div>
+							<div class="player-slider__bar">
+								<div class="player-slider__bar-fill">
+									<a class="slide__bar-circle" href="#"><i class=" fa-solid fa-circle"></i></a>
+								</div>
+							</div>
+						<div>
+							<p class="small-text text-white">4:35</p>
+						</div>
 					</div>
 				</div>
 
-
+				<!-- Toolbar Utility icons -->
 				<div class="toolbar__utility">
-
+					<ul>
+						<li><i class="fa-solid fa-list-ul"></i></li>
+						<li><i class="fa-solid fa-display"></i></li>
+						<li><i class="fa-solid fa-volume-high"></i></li>
+						<li>
+							<div class="player-slider__bar">
+								<div class="player-slider__bar-fill">
+									<a class="slide__bar-circle" href="#"><i class=" fa-solid fa-circle"></i></a>
+								</div>
+							</div>
+						</li>
+					</ul>
 			  </div>
 		</footer>
   </body>
