Add: Toolbar utility icons with volume bar

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 						<h4 class="text-white medium-text">Sinister</h4>
 						<p class="small-text text-grey">Brano Nome</p>
 					</div>
+					<div class="toolbar__current-icon">
 						<span>
-							<a href="#"><i class="toolbar__current-icon text-grey fa-regular fa-heart"></i></a>
+							<a href="#"><i class=" text-grey fa-regular fa-heart"></i></a>
 						</span>
 						<span>
 							<a href="#"><i class="text-grey fa-regular fa-folder"></i></a>
-						</span>																				
+						</span>	
+					</div>																									
 				</div>
 
 				<!-- Toolbar Media player -->
@@ -66,20 +68,18 @@
 				</div>
 
 				<!-- Toolbar Utility icons -->
-				<div class="toolbar__utility">
-					<ul>
+					<ul class="toolbar__utility">
 						<li><i class="fa-solid fa-list-ul"></i></li>
 						<li><i class="fa-solid fa-display"></i></li>
 						<li><i class="fa-solid fa-volume-high"></i></li>
-						<li>
-							<div class="player-slider__bar">
+						<li class="toolbar__utility-volume">
+							<div class="player-slider__bar ">
 								<div class="player-slider__bar-fill">
 									<a class="slide__bar-circle" href="#"><i class=" fa-solid fa-circle"></i></a>
 								</div>
 							</div>
 						</li>
 					</ul>
-			  </div>
 		</footer>
   </body>
 </html>
