Add: hover effects on toolbars items

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 					</figure>
 					<div>
 						<h4 class="text-white medium-text">Sinister</h4>
-						<p class="small-text text-grey">Brano Nome</p>
+						<p class="hover-white toolbar__current-name small-text text-grey">Brano Nome</p>
 					</div>
 					<div class="toolbar__current-icon">
 						<span>
-							<a href="#"><i class=" text-grey fa-regular fa-heart"></i></a>
+							<a href="#"><i class="hover-white text-grey fa-regular fa-heart"></i></a>
 						</span>
 						<span>
-							<a href="#"><i class="text-grey fa-regular fa-folder"></i></a>
+							<a href="#"><i class="hover-white text-grey fa-regular fa-folder"></i></a>
 						</span>	
 					</div>																									
 				</div>
