Add: Side bar with menu & responsive

--- a/index.html
+++ b/index.html
@@ -17,8 +17,38 @@
     <title>Spotify</title>
   </head>
   <body class="debu app">
-    <main class="app__content">
+    <main class="app__main-section">
       <!-- side bar + app content -->
+			<aside class="app__side-bar">
+				<!-- Side bar logo big & logo small hidden -->
+
+				<figure class="side-bar__logo">
+					<img src="./img/logo.svg" alt="">
+				</figure>
+				<figure class="side-bar__logo-sm">
+					<img src="./img/logo-small.svg" alt="">
+				</figure>
+
+				<!-- Side bar Home, Search library wiith hidden text -->
+				<ul class="side-bar__menu">
+					<li class="side-bar__menu-items">
+						<img class="menu-items__img" src="./img/home.svg" alt="">
+						<span class="menu-items__description">Home</span>
+					</li>
+					<li class="side-bar__menu-items">
+						<img class="menu-items__img" src="./img/search.svg" alt="">
+						<span class="menu-items__description">Cerca</span>
+					</li>
+					<li class="side-bar__menu-items">
+						<img class="menu-items__img" src="./img/libreria.svg" alt="">
+						<span class="menu-items__description">La tua libreria</span>
+					</li>
+				</ul>
+
+			</aside>
+			<section class="app__content">
+
+			</section>
     </main>
 
 	<!-- Toolbar -->
