Add: Side bar playlist with responsive

--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
 					</li>
 				</ul>
 
+				<!-- Side bar playlist -->
+				<div class="side-bar__playlist">
+					<h3 class="playlist__title">Playlist</h3>
+					<ul class="side-bar__playlist-items">
+						<li class="playlist__create">
+							<i class="playlist__create-icon fa-solid fa-square-plus"></i>
+							<span class="playlist__create-text">Crea Playlist</span>
+						</li>
+						<li>Nome Playlist</li>
+						<li>Nome Playlist</li>
+						<li>Nome Playlist</li>
+						<li>Nome Playlist</li>
+						<li>Nome Playlist</li>
+						<li>Nome Playlist</li>
+						<li>Nome Playlist</li>
+					</ul>
+				</div>
+				
+
 			</aside>
 			<section class="app__content">
 
@@ -61,7 +80,7 @@
 					</figure>
 					<div>
 						<h4 class="text-white medium-text">Sinister</h4>
-						<p class="hover-white toolbar__current-name small-text text-grey">Brano Nome</p>
+						<p class="hover-white toolbar__current-name x-small-text text-grey">Brano Nome</p>
 					</div>
 					<div class="toolbar__current-icon">
 						<span>
@@ -84,7 +103,7 @@
 					</ul>
 					<div class="toolbar__player-slider">
 						<div>
-							<p class="small-text text-white">0:25</p>
+							<p class="x-small-text text-white">0:25</p>
 						</div>
 							<div class="player-slider__bar">
 								<div class="player-slider__bar-fill">
@@ -92,7 +111,7 @@
 								</div>
 							</div>
 						<div>
-							<p class="small-text text-white">4:35</p>
+							<p class="x-small-text text-white">4:35</p>
 						</div>
 					</div>
 				</div>
