--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
 						<li>Nome Playlist</li>
 						<li>Nome Playlist</li>
 					</ul>
+					<div class="side-bar__footer">
+						<div class="side-bar__footer-inst">
+							<span class="hover-white"><i class="fa-regular fa-circle-down"></i></span>
+							<span class="small-text hover-white">Installa app</span>
+						</div>
+						<div class="side-bar__footer-account">
+							<span class="footer-account__icon"><i class="fa-regular fa-circle-user"></i></span>
+							<span class="medium-text text-white text-bold">John Doe</span>
+						</div>
+					</div>
 				</div>
 				
 
