Fix: major toolbar responsive gaps

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 						<li>Nome Playlist</li>
 						<li>Nome Playlist</li>
 					</ul>
+
+					<!-- Side bar footer -->
 					<div class="side-bar__footer">
 						<div class="side-bar__footer-inst">
 							<span class="hover-white"><i class="fa-regular fa-circle-down"></i></span>
@@ -73,8 +75,12 @@
 					</div>
 				</div>
 			</aside>
-			<section class="app__content">
 
+			<!-- App main content -->
+			<section class="app__content">
+				<div class="app-content__header">
+					<a class="button large-text text-bold text-white" href="#">Effettua l'upgrade</a>
+				</div>
 			</section>
     </main>
 
