Add: Main content header & nav-bar

--- a/index.html
+++ b/index.html
@@ -78,9 +78,19 @@
 
 			<!-- App main content -->
 			<section class="app__content">
-				<div class="app-content__header">
-					<a class="button large-text text-bold text-white" href="#">Effettua l'upgrade</a>
+				<div class="app__content-header">
+					<a class="header-button text-bold text-white" href="#">Effettua l'upgrade</a>
 				</div>
+				<nav class="app__content-nav">
+					<ul class="nav-list">
+						<li class="nav-list__item"><a href="#">In evidenza</a></li>
+						<li class="nav-list__item"><a href="#">Podcast</a></li>
+						<li class="nav-list__item"><a href="#">Classifiche</a></li>
+						<li class="nav-list__item"><a href="#">Generi e Mood</a></li>
+						<li class="nav-list__item"><a href="#">Nuove Uscite</a></li>
+						<li class="nav-list__item"><a href="#">Scopri</a></li>
+					</ul>
+				</nav>
 			</section>
     </main>
 
