Fix: side bar responsive

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <div class="side-bar__footer">
               <div class="side-bar__footer-inst">
                 <span class="hover-white"><i class="fa-regular fa-circle-down"></i></span>
-                <span class="small-text hover-white">Installa app</span>
+                <span class="menu-items__description small-text hover-white">Installa app</span>
               </div>
               <div class="side-bar__footer-account">
                 <span class="footer-account__icon"><i class="fa-regular fa-circle-user"></i></span>
-                <span class="medium-text text-white text-bold">John Doe</span>
+                <span class="menu-items__description medium-text text-white text-bold">John Doe</span>
               </div>
             </div>          
         </div>
