Fix: border bottom nav bar

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 				</div>
 				<nav class="app__content-nav">
 					<ul class="nav-list">
-						<li class="nav-list__item"><a href="#">In evidenza</a></li>
-						<li class="nav-list__item"><a href="#">Podcast</a></li>
-						<li class="nav-list__item"><a href="#">Classifiche</a></li>
-						<li class="nav-list__item"><a href="#">Generi e Mood</a></li>
-						<li class="nav-list__item"><a href="#">Nuove Uscite</a></li>
-						<li class="nav-list__item"><a href="#">Scopri</a></li>
+						<li class="nav-list__item bottom-border"><a href="#">In evidenza</a></li>
+						<li class="nav-list__item bottom-border"><a href="#">Podcast</a></li>
+						<li class="nav-list__item bottom-border"><a href="#">Classifiche</a></li>
+						<li class="nav-list__item bottom-border"><a href="#">Generi e Mood</a></li>
+						<li class="nav-list__item bottom-border"><a href="#">Nuove Uscite</a></li>
+						<li class="nav-list__item bottom-border"><a href="#">Scopri</a></li>
 					</ul>
 				</nav>
 
