Add: playlists section content & overflow test

--- a/index.html
+++ b/index.html
@@ -94,6 +94,154 @@
 				</nav>
 
 				<!-- Main content playlists -->
+        <div class="playlists">
+          <!-- Playlist 1 -->
+            <div class="playlists__title">
+              Recently played
+            </div>
+            <div class="playlists__content">            
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>  
+            </div>
+            
+            <!-- playlist 2  -->
+            <div class="playlists__title">
+              Recently played
+            </div>
+            <div class="playlists__content">            
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>  
+            </div>
+            <!-- playlist 3 -->
+            <div class="playlists__title">
+              Recently played
+            </div>
+            <div class="playlists__content">            
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>  
+            </div>
+
+            <!-- playlist 4 -->
+            <div class="playlists__title">
+              Recently played
+            </div>
+            <div class="playlists__content">            
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/metal_lifting.jpg" alt="">
+                <h4 class="album__title">Heavy Metal</h4>
+                <p class="album__subtitle">Subtitle</p>
+              </div>  
+            </div>
+        </div>
 			</section>
     </main>
 
