--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="playlists">
           <!-- Playlist 1 -->
             <div class="playlists__title">
-              Recently played
+              <h2>Recently played</h2>
             </div>
             <div class="playlists__content">            
               <div class="playlists__album">
@@ -106,141 +106,64 @@
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
+                <img src="./img/stranger.jpeg" alt="">
+                <h4 class="album__title">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
+                <p class="album__subtitle">Kyle Dixon & Michael Stein</p>
+              </div>
+              <div class="playlists__album">
+                <img src="./img/aquietplace.jpeg" alt="">
+                <h4 class="album__title">A quiet place</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
+                <img src="./img/split.jpeg" alt="">
+                <h4 class="album__title">Split</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
+                <img src="./img/cure.jpeg" alt="">
+                <h4 class="album__title">A cure for wellness</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
+                <img src="./img/sinister.jpeg" alt="">
+                <h4 class="album__title">Sinister</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>  
             </div>
             
             <!-- playlist 2  -->
             <div class="playlists__title">
-              Recently played
-            </div>
+              <h2>Creato per John Doe</h2>
+              <p class="playlists__subtitle">Più ascoltati, più accurati saranno i suggerimenti</p>
+            </div>           
             <div class="playlists__content">            
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
+                <img src="./img/radar.jpeg" alt="">
+                <h4 class="album__title">Release Radar</h4>                
               </div>
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>  
+                <img src="./img/mixdaily.jpeg" alt="">
+                <h4 class="album__title">Daily Mix 1</h4>
+              </div>               
             </div>
             <!-- playlist 3 -->
             <div class="playlists__title">
-              Recently played
-            </div>
+              <h2>Artisti più popolari</h2>
+              <p class="playlists__subtitle">Più ascoltati, più accurati saranno i suggerimenti</p>
+            </div>           
             <div class="playlists__content">            
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
+                <img class="circle-img" src="./img/youg.jpeg" alt="">
+                <h4 class="album__title">Lana del Rey</h4>                
               </div>
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>  
+                <img class="circle-img" src="./img/einaudi.jpeg" alt="">
+                <h4 class="album__title">Ludovico Einaudi</h4>
+              </div>               
             </div>
-
             <!-- playlist 4 -->
-            <div class="playlists__title">
-              Recently played
-            </div>
-            <div class="playlists__content">            
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>
-              <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
-                <h4 class="album__title">Heavy Metal</h4>
-                <p class="album__subtitle">Subtitle</p>
-              </div>  
-            </div>
+            
         </div>
 			</section>
     </main>
