--- a/index.html
+++ b/index.html
@@ -101,32 +101,50 @@
             </div>
             <div class="playlists__content">            
               <div class="playlists__album">
-                <img src="./img/metal_lifting.jpg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/metal_lifting.jpg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div>                              
                 <h4 class="album__title">Heavy Metal</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/stranger.jpeg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/stranger.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
                 <p class="album__subtitle">Kyle Dixon & Michael Stein</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/aquietplace.jpeg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/aquietplace.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">A quiet place</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/split.jpeg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/split.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">Split</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/cure.jpeg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/cure.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">A cure for wellness</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>
               <div class="playlists__album">
-                <img src="./img/sinister.jpeg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/sinister.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">Sinister</h4>
                 <p class="album__subtitle">Subtitle</p>
               </div>  
@@ -139,11 +157,17 @@
             </div>           
             <div class="playlists__content">            
               <div class="playlists__album">
-                <img src="./img/radar.jpeg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/radar.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">Release Radar</h4>                
               </div>
               <div class="playlists__album">
-                <img src="./img/mixdaily.jpeg" alt="">
+                <div class="playlists__img">
+                  <img src="./img/mixdaily.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">Daily Mix 1</h4>
               </div>               
             </div>
@@ -154,16 +178,20 @@
             </div>           
             <div class="playlists__content">            
               <div class="playlists__album">
-                <img class="circle-img" src="./img/youg.jpeg" alt="">
+                <div class="playlists__img circle-img-hidden">
+                  <img src="./img/youg.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">Lana del Rey</h4>                
               </div>
               <div class="playlists__album">
-                <img class="circle-img" src="./img/einaudi.jpeg" alt="">
+                <div class="playlists__img circle-img-hidden">
+                  <img src="./img/einaudi.jpeg" alt="">
+                  <div class="play-icon"><i class="play fa-regular fa-circle-play"></i></div>
+                </div> 
                 <h4 class="album__title">Ludovico Einaudi</h4>
               </div>               
-            </div>
-            <!-- playlist 4 -->
-            
+            </div>                     
         </div>
 			</section>
     </main>
