--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <script
       src="https://kit.fontawesome.com/bfd5138bab.js"
       crossorigin="anonymous"
