Rework: Spotify green favicon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" sizes="16x16" href="https://open.spotifycdn.com/cdn/images/favicon16.1c487bff.png" type="image/x-icon">
     <script
       src="https://kit.fontawesome.com/bfd5138bab.js"
       crossorigin="anonymous"
